feat: case category model
