# app/Http/Resources/CaseCategoryResource.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+/** @mixin \App\Models\CaseCategory */
+class CaseCategoryResource extends JsonResource
+{
+    public function toArray(Request $request): array
+    {
+        return [
+            'created_at' => $this->created_at,
+            'updated_at' => $this->updated_at,
+            'id' => $this->id,
+            'name' => $this->name,
+            'label' => $this->label,
+            'color' => $this->color,
+        ];
+    }
+}
